Fixes margins on step 1 and 3 so that they match step 2 on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -92,7 +92,7 @@ section {
 
 .step1 {
   margin-top: 30px;
-  margin-right: 30vw;
+  margin-right: 20vw;
 }
 
 .step2 {
@@ -102,7 +102,7 @@ section {
 
 .step3 {
   margin-top: 30px;
-  margin-right: 30vw;
+  margin-right: 10vw;
 }
 
 .target-nav {
